# PancakeFlip

./: .gitignore  README.md
src/interbotix_ros_manipulators/interbotix_ros_xsarms/pancake_flipping/: CMakeLists.txt  notes  package.xml
src/interbotix_ros_manipulators/interbotix_ros_xsarms/pancake_flipping/bundles/: big_pancake.xml
src/interbotix_ros_manipulators/interbotix_ros_xsarms/pancake_flipping/config/: playback_modes.yaml
src/interbotix_ros_manipulators/interbotix_ros_xsarms/pancake_flipping/csv/: dis52_c_l_p_200.csv  dis52_c_l_p_201.csv  dis52_c_l_p_202.csv  dis52_c_l_p_203.csv  dis52_c_l_p_204.csv  dis52_c_l_p_205.csv  dis52_c_l_p_206.csv  dis52_c_l_p_207.csv  dis52_c_l_p_208.csv  dis52_c_l_p_209.csv  dis52_c_l_p_210.csv  dis52_c_l_p_211.csv  dis52_c_l_p_212.csv  dis52_c_l_p_213.csv  dis52_c_l_p_214.csv  dis52_c_l_p_215.csv  dis52_c_l_p_216.csv  dis52_c_l_p_217.csv  dis52_c_l_p_218.csv  dis52_c_l_p_219.csv  dis52_c_l_p_220.csv  dis52_c_l_p_221.csv  dis52_c_l_p_222.csv  dis52_c_l_p_223.csv  dis52_c_l_p_224.csv  dis52_c_l_p_225.csv  dis52_c_l_p_226.csv  dis52_c_l_p_227.csv  dis52_c_l_p_228.csv  dis52_c_l_p_229.csv  dis52_c_l_p_230.csv  dis52_c_l_p_231.csv  dis52_c_l_p_232.csv  dis52_c_l_p_233.csv  dis52_c_l_p_234.csv  dis52_c_l_p_235.csv  dis52_c_l_p_236.csv  dis52_c_l_p_237.csv  dis52_c_l_p_238.csv  dis52_c_l_p_239.csv  (+11 more)
src/interbotix_ros_manipulators/interbotix_ros_xsarms/pancake_flipping/launch/: cam2_calibration_2x2 copy.launch  camera_broadcasters.launch  dataset_generation.launch  engine.launch  flip.launch  infra_data.launch  synced_cams.launch  three_cam_bag_gen.launch  three_cameras.launch  three_cameras_bundle.launch  three_cameras_multi_cam.launch
src/interbotix_ros_manipulators/interbotix_ros_xsarms/pancake_flipping/rviz/: three_cameras.rviz  three_cameras_infra.rviz  two_cameras_infra.rviz
src/interbotix_ros_manipulators/interbotix_ros_xsarms/pancake_flipping/scripts/: set_exposure.sh
(+140 files in other folders)
